--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Lint (ruff)
         run: |
-          ruff scripts viz
+          ruff check scripts viz
 
       - name: Smoke test
         run: |
